--- a/css/style.css
+++ b/css/style.css
@@ -1,55 +1,120 @@
+/* General setup */
+
+* {
+    box-sizing: border-box;
+}
+
 html {
-  font-family: sans-serif;
     font-size:16px;
 }
 
-header, 
+body {
+    margin: 1.5rem auto;
+    width:90%;
+    min-width:56.25rem;
+}
+
+/* Layout */
+
 main {
+    overflow:auto;
+    min-width:45rem;
     
-    margin:0 auto;
-    width:80%;
 }
 
-table {
-  border-collapse: collapse;
-  border: 2px solid rgb(200,200,200);
-  letter-spacing: 1px;
-  font-size: 0.75rem;
+section {
+    float: left;
+    min-width: 22.5rem;
+    width:50%;
+}
+
+figure {
+    width:60%;
+    margin:0 10% 0 0;
+    float:left;
+}
+
+figure img {
     width:100%;
-    max-width:1920px;
+    max-width:25rem;
 }
 
-td, th {
-  border: 1px solid rgb(190,190,190);
-  padding: .625rem 1.25rem;
+figcaption {
+    margin:.375rem 0;
 }
 
-th {
-  background-color: rgb(235,235,235);
+.long-list {
+    margin-top:0;
 }
 
-td {
-  text-align: center;
+nav {
+    float: left;
+    width:11.25rem;
 }
 
-tr:nth-child(even) td {
-  background-color: rgb(250,250,250);
+footer {
+    clear: both;
+    margin-top:1.5rem;
 }
 
-tr:nth-child(odd) td {
-  background-color: rgb(245,245,245);
+section, aside, nav, footer {
+  padding: .5rem;
 }
 
-col:nth-child(2) {
-    border:2px solid #000;
+/* header and footer */
+
+header, footer {
+  border-top: .125rem solid #33658A;
+  border-bottom: .125rem solid #33658A;
 }
 
-caption {
-  padding: .625rem;
-}
+/* ------ START WRITING YOUR CODE BELOW THIS LINE ------ */
 
-img {
-    
-    width:100%; max-width:4.53125rem;
-    
-}
+/* NO changes should be made to any of the code above. */
+
+/* NOTE: While you will be using some of the same CSS properties, the VALUES 
+   may need to be different in order to style the page correctly. */
+
+
+
+/* Imported Typfaces */
+
+
+
+
+
+/* Typography Styles */
+
+
+
+
+
+
+/* Link Styling */
+
+
+
+
+
+
+/* List Styling */
+
+
+
+
+
+
+/* Navigation Menu */
+
+
+
+
+
+
+/* Footer Styles */
+
+
+
+
+
+
