--- a/css/style.css
+++ b/css/style.css
@@ -61,3 +61,9 @@ img {
     margin: 0 auto;
 }
 
+.navbar {
+    overfolow:hidden;
+    background: white;
+    font-family:serif;
+    font-size:16px;
+}
