--- a/css/style.css
+++ b/css/style.css
@@ -71,7 +71,7 @@ img {
 .navbar a{
     float:left;
     width:100px;
-    display:block;
+    display: inline-block;
     color:blueviolet;
     text-align:center;
     padding:20px 15px;
