--- a/css/style.css
+++ b/css/style.css
@@ -65,13 +65,13 @@ img {
     overfolow:hidden;
     background: white;
     font-family:serif;
-    font-size:44px;
+    font-size:20px;
 }
 
 .navbar a{
     float:left;
-    width:50px;
-    display: inline-block;
+    width:100px;
+    display:block;
     color:blueviolet;
     text-align:center;
     padding:20px 15px;
