--- a/css/style.css
+++ b/css/style.css
@@ -80,3 +80,9 @@ img {
     font-weight:bold;
     border-bottom:5px solid transparent;
 }
+h1{
+    width: 500px;
+    margin: 0 auto;
+    background: white;
+    text-align: center;
+}
