--- a/css/style.css
+++ b/css/style.css
@@ -97,5 +97,18 @@ h1{
 
 header{
     -webkit-transform: rotate(2deg);
-    font-family:monospace;
+    font-family:serif;
+}
+
+.column{
+    display: flex;
+    flex-direction: column;
+    flex-basis: 100%;
+}
+.column-1 {
+    column-width:600px;
+}
+
+.column-2{
+    column-width:200px;
 }
